force-app/main/default/objects/ASSET__c/ASSET__c.object-meta.xml
<CustomObject>
    <label>Assets.</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>ASSET ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>