force-app/main/default/objects/ASSET__c/fields/AssetDescription__c.field-meta.xml
<CustomField>
    <fullName>AssetDescription__c</fullName>
    <label>ASSET DESCRIPTION</label>
    <type>TextArea</type>
</CustomField>