force-app/main/default/objects/ASSET__c/fields/AssetName__c.field-meta.xml
<CustomField>
    <fullName>AssetName__c</fullName>
    <label>ASSET NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>