force-app/main/default/objects/ASSET__c/fields/AssetType__c.field-meta.xml
<CustomField>
    <fullName>AssetType__c</fullName>
    <label>ASSET TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AssetType</valueSetName>
    </valueSet>
</CustomField>