force-app/main/default/objects/ASSET__c/fields/TotalAmountOfPurchasingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfPurchasingLocal__c</fullName>
    <formula>PurchasingInvoiceID__r.TotalAmountLocal__c</formula>
    <label>TOTAL AMOUNT OF PURCHASING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>