force-app/main/default/objects/ASSET__c/fields/UserDepartment__c.field-meta.xml
<CustomField>
    <fullName>UserDepartment__c</fullName>
    <label>USER DEPARTMENT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Department</valueSetName>
    </valueSet>
</CustomField>