force-app/main/default/objects/ASSET__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AssetName__c</columns>
    <columns>AssetIdentificationCode__c</columns>
    <columns>AssetType__c</columns>
    <columns>AssetSubtype__c</columns>
    <columns>AssetDescription__c</columns>
    <columns>AssetUsefulLifeMonth__c</columns>
    <columns>TotalAmountOfPurchasingLocal__c</columns>
    <columns>AmountPurchasingIncludeTaxLocal__c</columns>
    <columns>SalvageValue__c</columns>
    <columns>PurchasingInvoiceID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>